--- a/index.html
+++ b/index.html
@@ -385,6 +385,13 @@
                 document.getElementById('tfliteStatus').style.opacity = '0.3';
             }
 
+            if (!segmenter) {
+                document.getElementById('debugInfo').innerHTML += '<div style="color:red;">❌ Segmenter tidak aktif (fallback)</div>';
+            }
+            else {
+                document.getElementById('debugInfo').innerHTML += '<div style="color:green;">✅ Segmenter aktif (GPU)</div>';
+            }
+
             updateLoadingText('Loading MediaPipe Hands...');
 
             hands = new Hands({
